# By default, enable Dragonfly_V1 crypto method.
option('enable_dragonfly_v1', type: 'boolean', value: true)
option('dragonfly_v1_default_garlic',
  type: 'integer', min: 0, max: 63, value: 22)
# By default, do not turn on debugging symbols.
option('use_debug_symbols', type: 'boolean', value: false)
option('native_optimize', type: 'boolean', value: false)
# By default, disallow and die when receiving non-meaningful arguments.
option('strict_arg_processing', type: 'boolean', value: true)
option('base_static', type: 'boolean', value: false)
option('skc_static', type: 'boolean', value: false)
option('debug_build', type: 'boolean', value: false)
